<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toTopOf="@+id/glTop" />

    <com.oddlyspaced.compass.custom.view.CustomTextField
        android:id="@+id/ctfName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hint="@string/hint_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/txSignUpSubtext"
        app:title="@string/your_name" />

    <com.oddlyspaced.compass.custom.view.CustomTextField
        android:id="@+id/ctfPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hint="@string/hint_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/ctfName"
        app:title="@string/your_pass" />

    <com.oddlyspaced.compass.custom.view.CustomButton
        android:id="@+id/customButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/ctfPassword"
        app:text="@string/text_continue" />

    <TextView
        android:id="@+id/txSignUpSubtext"
        style="@style/TextAppearance.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/using_sign_up"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>